--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
 
 <!--   dependencies -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.0.1/ui-bootstrap-tpls.min.js"></script>
-  <script src="//unpkg.com/angular-ui-router/release/angular-ui-router.min.js"></script>  
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   
 <title>Pokegachi</title>
 </head>
 <body data-ng-app = "myApp">
-  <div data-ui-view>
+  <div data-ui-view class="container text-center">
     <h1>Welcome to Pokegachi!</h1>
     <div class = "row">
       <button data-ui-sref = "createNew" class = "btn">Make A New Pokegachi</button`>
       <button data-ui-sref = "home" class = "btn">Retrieve Current Pokegachi</button>
     </div>
   </div>
-  
+
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.0.1/ui-bootstrap-tpls.min.js"></script>
+  <script src="//unpkg.com/angular-ui-router/release/angular-ui-router.min.js"></script>  
   <script src = "app.js"></script>
   <script src = "controllers.js"></script>
   <script src = "services.js"></script>
